--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,16 +1,17 @@
 body {
     margin: 0;
     background-color: black;
+    font-family: 'Helvetica', sans-serif;
 }
 
 #container {
     width: 800px;
-    height:600px;
+    height: 600px;
     margin: 20px auto;
     border: 1px solid #eee;
     position: relative;
 }
-#game, #status {
+#game, #status, #lobby {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -25,13 +26,29 @@ body {
 #status {
     background-color: white;
     opacity:0.8;
-    z-index:1;
+    z-index:2;
 }
 
 #statustext {
     margin: 300px auto;
     width: 600px;
     height: 50px;
-    font-family: 'Helvetica', sans-serif;
     text-align: center;
+}
+
+#lobby {
+    text-align: center;
+    color: white;
+    background-color: black;
+    z-index:1;
+}
+
+#lobbyInner {
+    padding: 50px;
+}
+
+#players {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
 }
