--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -29,6 +29,7 @@ body {
     margin: 0 auto;
     border: 1px solid #eee;
     position: relative;
+    color: black;
 }
 #game, #status, #lobby {
     width: 100%;
