--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 #gameframe h4{
-    margin: 0;  
+    margin: 0;
     margin-bottom: 10px;
 }
 
@@ -31,7 +31,7 @@ body {
     position: relative;
     color: black;
 }
-#game, #status, #lobby {
+#game, #status, #lobby, #win {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -71,4 +71,11 @@ body {
     list-style: none;
     margin-left: 0;
     padding-left: 0;
+}
+
+#win {
+    text-align: center;
+    color: white;
+    background-color: black;
+    z-index:1;
 }
